# FastApiStudy

./: .gitignore  notes.md  rules.md  run.md  study.md
fastapi-ca/: alembic.ini  config.py  containers.py  database.py  main.py  pyproject.toml
fastapi-ca/common/: auth.py
fastapi-ca/example/ch06_02/: sync_ex.py
fastapi-ca/migrations/: env.py
fastapi-ca/migrations/versions/: 094ddceb3dc1_add_user_table.py  186b1682e5d2_add_note_tag.py  455f37b74619_add_note_tag.py  d4919297e2b7_add_note_tag.py  d8107f55fde4_user_add_memo.py
fastapi-ca/note/application/: note_service.py
fastapi-ca/note/domain/: note.py
fastapi-ca/note/domain/repository/: note_repo.py
fastapi-ca/note/infra/db_models/: note.py
fastapi-ca/note/infra/repository/: note_repo.py
fastapi-ca/note/interface/controllers/: note_controller.py
fastapi-ca/user/application/: user_service.py
fastapi-ca/user/domain/: user.py
fastapi-ca/user/domain/repository/: user_repo.py
fastapi-ca/user/infra/db_models/: user.py
fastapi-ca/user/infra/repository/: user_repo.py
fastapi-ca/user/infra/repository/db_models/: user.py
fastapi-ca/user/interface/controller/: user_controller.py
fastapi-ca/user/note/domain/: note.py
fastapi-ca/utils/: crypto.py
