[project]
name = "fastapi-ca"
version = "0.1.0"
description = ""
authors = [
    {name = "hjw3417",email = "rapheo0913@gmail.com"}
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn[standard] (>=0.48.0,<0.49.0)",
    "py-ulid (>=1.0.3,<2.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "pymysql (>=1.2.0,<2.0.0)",
    "cryptography (>=48.0.0,<49.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "bcrypt (==4.0.1)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
